--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,23 @@ dev_dependencies:
 
 
 flutter:
-  assets:
-    - assets/clave_click.wav
 
   uses-material-design: true
+
+  fonts:
+    - family: whole
+      fonts:
+        - asset: assets/fonts/ic_whole.ttf
+    - family: half
+      fonts:
+        - asset: assets/fonts/ic_half.ttf
+    - family: quarter
+      fonts:
+        - asset: assets/fonts/ic_quarter.ttf
+    - family: eighth
+      fonts:
+        - asset: assets/fonts/ic_eighth.ttf
+    - family: sixteenth
+      fonts:
+        - asset: assets/fonts/ic_sixteenth.ttf
+
